--- a/google_books_api/books/templates/books/base.html
+++ b/google_books_api/books/templates/books/base.html
@@ -32,7 +32,7 @@
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
                         <a class="navbar-brand mr-4" href="{% url 'books_list' %}">Books list</a>
-                        <a class="nav-link" href="#">Add book</a>
+                        <a class="nav-link" href="{% url 'add_book' %}">Add book</a>
                         <a class="nav-link" href="#">Add book with Google</a>
                     </div>
         </nav>
