added templates tittle

--- a/google_books_api/books/templates/books/import_books.html
+++ b/google_books_api/books/templates/books/import_books.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 
+<title>Import book</title>
 <h1> Import books from Google </h1>
 
 <h5>Please enter title, keywords or isbn number for books that you want to import from google API.</h5>
