book detail object removed to have clear

--- a/google_books_api/books/templates/books/books_detail.html
+++ b/google_books_api/books/templates/books/books_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <title>Book Detail</title>
-<h2>Book {{ object.title }} detail</h2>
+<h2>Book detail</h2>
 
 
 <div class="media-body">
