book title in detail added

--- a/google_books_api/books/templates/books/books_detail.html
+++ b/google_books_api/books/templates/books/books_detail.html
@@ -12,7 +12,7 @@
         </div>
         <div class="media">
             <div class="media-body">
-                <h2 class="mt-2 mb-2">{{ object.title }}</h2>
+                <h2 class="mt-2 mb-2"><strong>Title: </strong>{{ object.title }}</h2>
                 <h5 class="mt-2 mb-2"><strong>Author: </strong>{{ object.author }}</h5>
                 <h5 class="mt-2 mb-2"><strong>Publication date: </strong>{{ object.published_date }}</h5>
                 <h5 class="mt-2 mb-2"><strong>ISBN Number: </strong>{{ object.isbn_number }}</h5>
