make tabe more responsive and table hover added

--- a/google_books_api/books/templates/books/books_list.html
+++ b/google_books_api/books/templates/books/books_list.html
@@ -32,8 +32,8 @@
 </form>
 <!--Filter form section END -->
 <!--BOOKS LIST START -->
-<div class="table table-bordered">
-    <table class="table table-striped">
+<div class="table-responsive-sm table-bordered">
+    <table class="table table-striped table-hover">
         <thead>
             {% if object_list %}
             <tr>
